# worldLineSim

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Idea.md  PKGBUILD  README.md  TODO  _test.cpp  canvas.ts  future.md  gcc_internal_segfault  idea.md  index.html  interesting  main.cpp  simulator  test.cxx  util.ts
.github/workflows/: cmake.yml  cmake_ubuntu.yml  cmake_win.yml  codeql-analysis.yml  pkgbuild.yml
db/: Indian_Female_Names.list  Indian_Male_Names.list  database.hpp
display/: curses_start.cpp  curses_subwin.hpp  display.hpp  ludo_disp.hpp  node_adapter.hpp  subwin.hpp
display/src/: curses_subwin.cpp  display.cpp  node_adapter.cpp  subwin.cpp
ext/loguru/: CMakeLists.txt  loguru.hpp
graphMat/: README.md  direction.hpp  graph__square_mat.hpp  graph__square_mat_decl.hpp  graph_box.hpp  graph_mat.hpp  graph_mat_decl.hpp  graph_path_finder.hpp  range_iterator.hpp  test.cxx
graphMat/test_util/: node_conn.hpp
human/: brain.rs  ear.rs  eye.rs  mouth.rs
include/: adapter.hpp  config.hpp  declarations.hpp  entity.hpp  entity_types.hpp  exceptions.hpp  forward_decl.hpp  id_creator.hpp  logger.hpp  obstacle.hpp  path_finder.hpp  state.hpp  verse.hpp  world.hpp  world_node.hpp  world_plot.hpp  world_tree.hpp
include/Entities/: human.hpp  planet.hpp  rock.hpp  snake.hpp  solar_system.hpp  star.hpp
include/Entities/Custom/: aliens.hpp  cheems_vidhayak.hpp  mathematicians.hpp  rabin.hpp
include/Entities/Meta/Custom/GDSC/: README.md  gdsc.hpp
includes/: adapter.hpp  config.hpp  declarations.hpp  display.hpp  entity.hpp  entity_types.hpp  exceptions.hpp  forward_decl.hpp  id_creator.hpp  log.hpp  logger.hpp  path_finder.hpp  random.hpp  snake.hpp  state.hpp  verse.hpp  world.hpp  world_node.hpp  world_plot.hpp  world_tree.hpp
includes/Entities/: cheems_vidhayak.hpp  human.hpp  planet.hpp  rock.hpp  snake.hpp  solar_system.hpp  star.hpp
includes/Entities/Custom/: README.md  aliens.hpp  cheems_vidhayak.cpp  cheems_vidhayak.hpp  mathematicians.hpp  rabin.cpp  rabin.hpp
includes/Entities/Meta/Bhakt/: bhakt.hpp
includes/Entities/Meta/Custom/GDSC/: gdsc.hpp
js/: README.md  main.ts  pathFinder.ts  style.css  tsconfig.json  util.js
modules/communication/: README.md  communicator.hpp
modules/communication/interthread/: messagepipe.hpp  messagequeue.hpp
modules/internal/ArrayDiskSaver/include/: ArrayFile.hpp  MultiArraysManager.hpp  types.hpp
modules/internal/ArrayDiskSaver/src/: impl.cpp
modules/internal/ArrayDiskSaver/tests/: array_file.cpp  test.cpp
modules/internal/storage/ArrayDiskSaver/include/: ArrayFile.hpp
multiTerm/: Makefile  README.md  multi_term.hpp  single_term.hpp  test  test.cxx
multiTerm/learning_phase/: boxing_windows.md  coloured_chars.md  ncurses_extensions.md
references/: README.md  validator
src/: adapter.cpp  display.cpp  display_subwindow.cpp  dungeon.cpp  logger.cpp  obstacle.hpp  path_finder.cpp  snake.cpp  state.cpp  verse.cpp  world.cpp  world_node.cpp  world_plot.cpp  world_tree.cpp
src/Entities/: cheems_vidhayak.cpp  human.cpp  planet.cpp  rock.cpp  snake.cpp  solar_system.cpp  star.cpp
src/Entities/Custom/: aliens.cpp  cheems_vidhayak.cpp  mathematicians.cpp  rabin.cpp
src/Entities/Meta/Bhakt/: neeraj-watcher.cpp
src/Entities/Meta/Custom/GDSC/: README.md  gsdc.cpp
tests/: CMakeLists.old.txt  db.hpp
tests/Entities/: test_snake.cpp
types/: direction.d.ts  event.d.ts  person.d.ts  point.d.ts  snake.d.ts  world.d.ts
util/: converters.hpp  coord.hpp  math.hpp  random.hpp  ranges.hpp  tree.hpp
